Fixed bug #28627 (When multiple MySQL links are used default link is leaked). Patch by: gavin at ipalsoftware dot com